# New-Word-Extraction

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile.sh  main.cpp
include/: content_preproc.h  exception.h  mysql_api.h  new_word_extract.h  util.h
lib/: libboost_regex.so.1.66.0
new_words/: new_words_1.json
src/: CMakeLists.txt  Makefile  cmake_install.cmake  content_preproc.cpp  mysql_api.cpp  new_word_extract.cpp  util.cpp
